# DeveloperFinder

./: .env.example  .gitignore  Dockerfile  README.md  names.json  pyproject.toml
data/: turkish_names.json
tests/: test_llm_stages.py  test_main.py
verified_inviter/: _smoke_discovery.py  _smoke_email_send.py  _smoke_foundation.py  auth.py  config.py  content_fetch.py  dashboard.py  email_draft.py  email_send.py  knowledge.py  llm_client.py  main.py  matching.py  models.py  relevance.py  scheduler.py  server.py  store.py  technical_judge.py
verified_inviter/discovery/: github.py  huggingface.py  turkish_names.py
verified_inviter/static/: style.css
verified_inviter/templates/: access_denied.html  base.html  candidates.html  email_detail.html  emails.html  login.html  matches.html  overview.html  verdicts.html
