[project]
name = "verified_inviter"
version = "0.1.0"
description = "Verified Inviter Agent for exposureai.org"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "resend>=2.0",
  "python-dotenv>=1.0",
  "selectolax>=0.3",
  "flask>=3.0",
  "authlib>=1.0",
  "apscheduler>=3.10",
  "gunicorn>=22.0",
]

[project.scripts]
verified_inviter = "verified_inviter.main:main"
dashboard = "verified_inviter.dashboard:main"

[tool.setuptools]
packages = ["verified_inviter", "verified_inviter.discovery"]

[tool.setuptools.package-data]
verified_inviter = ["templates/*.html", "static/*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
